[Fix] Initializes autocomplete to work on view switches.

--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="../assets/css/app.css">
 <link rel="stylesheet" href="../assets/scss/foundation-icons.css">
 
-<div class="landing-container">
+<div class="landing-container" ng-init="main.autoCompleteInit();">
   <div class="landing-photo">
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
