--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,4 +1,4 @@
-<div class="row main-container" ng-init="main.initialize();">
+<div class="row main-container" ng-init="main.initialize(); main.autoCompleteInitialize();">
   <div class="col-md-6">
     <div class="map-container">
       <div id="map-canvas"></div>
