--- a/client/app/searchForm/searchFormTemplate.html
+++ b/client/app/searchForm/searchFormTemplate.html
@@ -1,4 +1,4 @@
-<div class="searchForm">
+<div class="searchForm" ng-init="main.autoCompleteInitialize();">
   <form name="landingSearchForm">
     <div class="form-group">
       <input class="form-control" type="search" ng-model="main.searchInfo.address" id='place-search' placeholder="Enter an Address" required>
