[feat] Adds functionality for loading gif

--- a/client/app/results/resultsTemplate.html
+++ b/client/app/results/resultsTemplate.html
@@ -1,5 +1,8 @@
-<div class="results-container">
+<div class="results-container" >
   <searchform></searchform>
   <filters></filters>
   <thumbnail></thumbnail>
+  <span ng-show="main.loading">
+    <img src="assets/images/download.gif">
+  </span>
 </div>
