--- a/client/app/filter/filterTemplate.html
+++ b/client/app/filter/filterTemplate.html
@@ -10,7 +10,7 @@
         <label>Order By:</label>
       </div>
       <div class="col-md-7">
-        <select class="form-control" name="selectOrder" ng-model="main.filterType">
+        <select class="form-control" name="selectOrder" ng-model="main.filterType" ng-init="main.filterType = 'commuteDistance'">
           <option value="orderPrice">Least Expensive</option>
           <option value="commuteTime">Shortest Commute</option>
           <option value="commuteDistance">Closest Distance</option>
@@ -56,9 +56,7 @@
             <button type="button" ng-click="main.filterNeighborhoods()" class="btn btn-default filter-btn">Filter</button>
           </div>
         </div>
-        <hr>
       </div>
-
     </form>
   </div>
 </div>
