--- a/client/app/results/resultsTemplate.html
+++ b/client/app/results/resultsTemplate.html
@@ -1,5 +1,14 @@
 <div class="results-container">
   <searchform></searchform>
   <filters></filters>
+  <hr>
+
+  <div ng-show="main.filteredNeighborhoodArray.length > 0">Ok, here are some neighborhoods you may want to consider:</div>
+
   <thumbnail></thumbnail>
+
+  <!-- <div ng-show="main.searchInfo.address.length === 0 || !main.searchInfo.address.length">Enter an address to search for neighborhoods</div> -->
+
+  <div ng-show="main.filteredNeighborhoodArray.length === 0 && !main.loading">There are no results to display.</div>
+
 </div>
