[Layout] Updates results view for larger screen widths

--- a/client/app/results/resultsTemplate.html
+++ b/client/app/results/resultsTemplate.html
@@ -3,7 +3,7 @@
   <filters></filters>
   <hr>
 
-  <div ng-show="main.filteredNeighborhoodArray.length > 0">Ok, here are some neighborhoods you may want to consider:</div>
+  <div ng-show="main.filteredNeighborhoodArray.length > 0">Click on a nieghborhood to view more information:</div>
 
   <thumbnail></thumbnail>
 
