--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -4,7 +4,7 @@
       <div id="map-canvas"></div>
     </div>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6" id="main-resultanddetails-container">
     <div ui-view="glance-card"></div>
   </div>
 </div>
