[Layout] Makes results layout responsive to tablet and adds loading image

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,5 +1,5 @@
 <div class="row main-container" ng-init="main.initialize(); main.autoCompleteInitialize();">
-  <div class="col-md-6">
+  <div class="col-md-6 main-left-container">
     <div class="map-container">
       <div id="map-canvas"></div>
     </div>
