--- a/client/app/results/resultsTemplate.html
+++ b/client/app/results/resultsTemplate.html
@@ -11,4 +11,7 @@
 
   <div ng-show="main.filteredNeighborhoodArray.length === 0 && !main.loading">There are no results to display.</div>
 
+  <span ng-show="main.loading">
+    <img src="assets/images/loading.gif">
+  </span>
 </div>
