--- a/client/app/filter/filterTemplate.html
+++ b/client/app/filter/filterTemplate.html
@@ -1,15 +1,15 @@
 <div class="filterForm" ng-init="isCollapsed=true">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-xs-4 col-md-6">
       <button type="button" class="btn btn-default filter-options-btn" ng-click="isCollapsed = !isCollapsed">Filter Options</button>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-xs-8 col-md-6 orderBy">
       <!--start of order-by section -->
-      <div class="col-md-4 orderBy">
+      <div class="col-sm-5 col-md-4">
         <label>Order By:</label>
       </div>
-      <div class="col-md-7">
+      <div class="col-xs-5 col-md-7">
         <select class="form-control" name="selectOrder" ng-model="main.filterType" ng-init="main.filterType = 'commuteDistance'">
           <option value="orderPrice">Least Expensive</option>
           <option value="commuteTime">Shortest Commute</option>
