[Style] Styles and preps recommendation cards.

--- a/client/app/results/resultsTemplate.html
+++ b/client/app/results/resultsTemplate.html
@@ -3,7 +3,7 @@
   <filters></filters>
   <hr>
 
-  <div ng-show="main.filteredNeighborhoodArray.length > 0">Click on a nieghborhood to view more information:</div>
+  <div class="direction" ng-show="main.filteredNeighborhoodArray.length > 0">Click on a neighborhood to view more information:</div>
 
   <thumbnail></thumbnail>
 
