--- a/client/app/searchForm/searchFormTemplate.html
+++ b/client/app/searchForm/searchFormTemplate.html
@@ -6,8 +6,8 @@
     <div class="form-group">
       <div class="row">
         <div class="col-sm-10 col-md-2">
-          <select class="form-control" name="rentBuy" ng-model="main.searchInfo.buyOrRent">
-            <option value="rent">Rent</option>
+          <select class="form-control dropdown-toggle" name="rentBuy" ng-model="main.searchInfo.buyOrRent">
+            <option value="rent">Rent<span class="glyphicon glyphicon-star"></span></option>
             <option value="buy">Buy</option>
           </select>
         </div>
@@ -33,8 +33,8 @@
             <option value="7">7+ bathrooms</option>
           </select>
         </div>
-        <div class="col-sm-10 col-md-2">
-           <button type="button" class="btn btn=default landing-btn landing-submit" ng-click="main.submitAddress()">Submit</button>
+        <div class="col-sm-10 col-md-2" >
+           <button type="button" class="searchForm-submit" ng-click="main.submitAddress()">Submit</button>
         </div>
       </div>
     </div>
