[Fix] Prevents pie chart from running when there is no data and prevents statistics from displaying when they are NaN

--- a/client/app/charts/chartsTemplate.html
+++ b/client/app/charts/chartsTemplate.html
@@ -1,7 +1,11 @@
 <div ng-controller="chartsController as chart">
-  <span>{{chart.incomeString}}</span>
-  <span>{{chart.sqftString}}</span>
-  <span>{{chart.yearBuiltString}}</span>
-  <span style=" min-width: 280px; margin: 0 auto" id="pie-chart"></span>
-  <span style=" min-width: 280px; margin: 0 auto" id="percentage-chart"></span>
+  <div><div>
+  <div><div>
+  <div>{{chart.incomeString}}</div>
+  <div>{{chart.sqftString}}</div>
+  <div>{{chart.yearBuiltString}}</div>
+  <div>
+    <span style=" min-width: 280px; margin: 0 auto" id="pie-chart"></span>
+    <span style=" min-width: 280px; margin: 0 auto" id="percentage-chart"></span>
+  </div>
 </div>
