--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
 <!-- start footer section -->
   <footer class="footer">
     <ul>
-      <li>&copy; Move-in Assistant</li>
+      <li>&copy; Turf | </li>
       <li>Raghav Abboy</li>
         <a class="icon-link" href="https://www.linkedin.com/in/raghavabboy"><i class="fi-social-linkedin"></i>
         </a>
