--- a/client/app/attractions/attractionsTemplate.html
+++ b/client/app/attractions/attractionsTemplate.html
@@ -1,7 +1,7 @@
 <!-- Attractions -->
 <div class="col-md-12 attractions-container">
   <ul ng-repeat="attraction in details.currentNeighborhood.attractions">
-    <li ng-click="details.displayMarkers(attraction); details.selectCategory($index, 'attractionCategory')" ng-class="{activeCategory: $index === details.selectedAttractionCategory}">
+    <li ng-click="details.displayMarkers(attraction, 'attraction'); details.selectCategory($index)" ng-class="{activeCategory: $index === details.selectedCategory}">
       <img class="icon" src="{{attraction[0].icon}}" alt="attraction category icon">
       <span>{{attraction[0].displayName}}</span>
     </li>
