--- a/client/app/attractions/attractionsTemplate.html
+++ b/client/app/attractions/attractionsTemplate.html
@@ -1,10 +1,18 @@
 <!-- Attractions -->
-<div class="col-md-12 attractions-container">
-  <ul ng-repeat="attraction in details.currentNeighborhood.attractions">
-    <li ng-click="details.displayMarkers(attraction, 'attraction'); details.selectCategory($index)" ng-class="{activeCategory: $index === details.selectedCategory}">
-      <img class="icon" src="{{attraction[0].icon}}" alt="attraction category icon">
-      <span>{{attraction[0].displayName}}</span>
-    </li>
-  </ul>
+<div class="col-md-12 attractions-container" ng-init="details.currentSpotsToDisplay = [];">
+  <div class="col-md-4 amenities-categories">
+    <ul ng-repeat="attraction in details.currentNeighborhood.attractions">
+      <li ng-click="details.displayMarkers(attraction); details.selectCategory($index); details.displayAmenitiesOrAttractions(attraction);" ng-class="{activeCategory: $index === details.selectedCategory}">
+        <img ng-src="{{details.getAttractionsIcon(attraction[0])}}" alt="">
+        <span>{{attraction[0].displayName}}</span>
+      </li>
+    </ul>
+   </div>
+
+  <div class="col-md-8 attractions-list">
+    <ul ng-repeat="spot in details.currentSpotsToDisplay">
+      <li ng-click="details.toggleTooltip(details.currentSpotsToDisplay[$index]);">{{spot.name}}</li>
+    </ul>
+  </div>
 </div>
 
