[Layout] Defines the subviews on the results page.

--- a/client/app/attractions/attractionsTemplate.html
+++ b/client/app/attractions/attractionsTemplate.html
@@ -1,8 +1,8 @@
 <!-- Attractions -->
-<div class="col-md-12 attractions-container" ng-init="details.currentSpotsToDisplay = [];">
+<div class="col-md-12 attractions-container" ng-init="details.currentSpotsToDisplay = []; details.stateSwitch('attractions');">
   <div class="col-md-4 amenities-categories">
     <ul ng-repeat="attraction in details.currentNeighborhood.attractions">
-      <li ng-click="details.displayMarkers(attraction); details.selectCategory($index); details.displayAmenitiesOrAttractions(attraction);" ng-class="{activeCategory: $index === details.selectedCategory}">
+      <li ng-click="details.displayMarkers(attraction); details.selectCategory($index); details.displayAmenitiesOrAttractions(attraction);" ng-class="{'activeCategory next': $index === details.selectedCategory}">
         <img ng-src="{{details.getAttractionsIcon(attraction[0])}}" alt="">
         <span>{{attraction[0].displayName}}</span>
       </li>
@@ -11,7 +11,9 @@
 
   <div class="col-md-8 attractions-list">
     <ul ng-repeat="spot in details.currentSpotsToDisplay">
-      <li ng-click="details.toggleTooltip(details.currentSpotsToDisplay[$index]);">{{spot.name}}</li>
+      <li class="spot" ng-click="details.toggleTooltip(details.currentSpotsToDisplay[$index]);">
+        <span>{{spot.name}}<span>
+      </li>
     </ul>
   </div>
 </div>
