--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -37,17 +37,17 @@
   <div class="col-sm-12 col-md-10 col-md-offset-1 nav-container">
     <div class="row">
       <div class="col-md-4">
-        <div class="nav-button">
+        <div class="nav-button-default" ng-class="details.tabs[0] === 1 ? 'nav-button-on' : 'nav-button-off'">
           <a ui-sref="main.details.services">Amenities</a>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="nav-button">
+        <div class="nav-button-default" ng-class="details.tabs[1] === 1 ? 'nav-button-on' : 'nav-button-off'">
           <a ui-sref="main.details.attractions">Attractions</a>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="nav-button">
+        <div class="nav-button-default" ng-class="details.tabs[2] === 1 ? 'nav-button-on' : 'nav-button-off'">
           <a ui-sref="main.details.charts">Statistics</a>
         </div>
       </div>
