[Style] Completes styling the statistics page.

--- a/client/index.html
+++ b/client/index.html
@@ -96,5 +96,6 @@
     <script src="app/mainCtrl.js"></script>
     <script src="app/charts/chartsController.js"></script>
     <script src="app/charts/chartsDirective.js"></script>
+    <script src="app/countup/countup.min.js"></script>
   </body>
 </html>
