--- a/client/index.html
+++ b/client/index.html
@@ -5,21 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turf</title>
     <link href='https://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
-    <link href="assets/css/styles.css" rel="stylesheet">
+    <link href="assets/css/popper.css" rel="stylesheet">
     <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/index.css" rel="stylesheet">
     <link href="assets/css/landing.css" rel="stylesheet">
     <link href="lib/slick-carousel/slick/slick.css" rel="stylesheet" >
     <link href="lib/slick-carousel/slick/slick-theme.css" rel="stylesheet">
 
-<!-- favicon info start -->
-<link rel="icon" type="image/png" href="assets/images/favicons/favicon-32x32.png" sizes="32x32">
-<link rel="manifest" href="assets/images/favicons/manifest.json">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-TileImage" content="/mstile-144x144.png">
-<meta name="theme-color" content="#ffffff">
-<!-- favicon info end -->
-
+    <!-- favicon info start -->
+    <link rel="icon" type="image/png" href="assets/images/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="manifest" href="assets/images/favicons/manifest.json">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <!-- favicon info end -->
   </head>
 
   <body ng-controller="MainController as main" id="Turf">
