--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -6,18 +6,17 @@
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
+          <img class="logo-header" src="./assets/images/logoHeader.png" alt="Introducing Turf logo">
           <h1 class="cover-heading">Find Your Next Neighborhood</h1>
           <button class="landing-btn" type="button" ng-click="main.goToAnchor('howItWorks')">How It Works</button>
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="searchForm col-sm-12 col-md-12" id="howItWorks">
-    <form class="landingSearchForm col-md-8 col-md-offset-2">
-      <div class="col-sm-4 col-md-6 landing-form">
-        <input class="form-control" type="search" autofocus="autofocus" ng-model="main.searchInfo.address" id='place-search' placeholder="Enter an Address">
-      </div>
+    <div class="searchForm col-sm-12 col-md-12" id="howItWorks">
+      <form class="landingSearchForm col-md-8 col-md-offset-2">
+        <div class="col-sm-4 col-md-6 landing-form">
+          <input class="form-control" type="search" autofocus="autofocus" ng-model="main.searchInfo.address" id='place-search' placeholder="Enter an Address">
+        </div>
         <div class="col-sm-4 col-md-1 landing-form">
           <select class="form-control" id="rentBuy" name="rentBuy" ng-model="main.searchInfo.buyOrRent">
             <option value="rent">Rent</option>
@@ -49,39 +48,52 @@
         <div class="col-sm-2 col-md-1 landing-form">
           <button type="button" ng-click="main.getResults()" class="landing-btn landing-submit">Submit</button>
         </div>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
 
-  <div class="feature-section">
-    <div class="col-md-12 feature-header-section">
-      <h1>Meet Your Next Neighborhood - From Your Browser.</h1>
-    </div>
 
-    <div class="row featurette featurette1">
+  <div class="feature-section">
+    <h1>Meet Your Next Neighborhood - From Your Browser.</h1>
+
+    <div class="featurette featurette1">
       <div class="col-sm-10 col-md-7">
         <h2 class="featurette-heading">Search Any City or Locality.<span class="text-muted"> Worldwide.</span></h2>
-        <p class="lead">Customizable search features that allow you to search, order, and filter results to find the best nieghborhoods for your lifestyle.</p>
+        <p class="lead">Customizable search features that allow you to search, order, and filter results to find the best neighborhoods for your lifestyle.</p>
+        <img class="featurette-small" src="assets/images/Landing/bar1small.png" alt="three small diverse neighborhood photos">
+      </div>
+      <div class="col-md-5">
+        <img src="assets/images/Landing/Bar1.png" alt="example statistics charts for neighborhood">
       </div>
     </div>
 
     <hr class="featurette-divider">
 
-    <div class="row featurette featurette2">
-      <div class="col-sm-10 col-md-7 col-md-push-5">
-        <h2 class="featurette-heading">Learn Local Culture.<span class="text-muted"> Find Your Place.</span></h2>
-        <p class="lead">Experience life in a neighborhood by viewing a live Instagram feed and exploring local spots with an interactive map</p>
+    <div class="featurette featurette2">
+      <div class="row">
+        <div class="col-md-5">
+          <img src="assets/images/Landing/Bar2.png" alt="example statistics charts for neighborhood">
+        </div>
+        <div class="col-sm-10 col-md-7">
+          <h2 class="featurette-heading">Learn Local Culture.<span class="text-muted"> Find Your Place.</span></h2>
+          <p class="lead">Experience life in a neighborhood by viewing a live Instagram feed and exploring local spots with an interactive map</p>
+        </div>
       </div>
     </div>
-<!--
+
     <hr class="featurette-divider">
- -->
-    <div class="row featurette featurette3">
+
+    <div class="featurette featurette3">
       <div class="col-sm-10 col-md-7">
         <h2 class="featurette-heading">Neighborhood Data.<span class="text-muted"> At Your Fingertips.</span></h2>
         <p class="lead">Access neighborhood specific rent and purchase prices, local commute times, detailed services and attractions in the area, and extensive demographic information.</p>
       </div>
+      <div class="col-md-5">
+        <img src="assets/images/Landing/Bar3.png" alt="example statistics charts for neighborhood">
+      </div>
     </div>
- </div>
+
+  </div>
 </div>
+
 
