[Cleanup] Renames all references to popper to mapPopper

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <title>Turf</title>
 
     <link href='https://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
-    <link href="assets/css/popper.css" rel="stylesheet">
+    <link href="assets/css/mapPopper.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/index.css" rel="stylesheet">
     <link href="assets/css/landing.css" rel="stylesheet">
