--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,20 @@
     <link rel="stylesheet" href="../assets/scss/foundation-icons.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css" rel="stylesheet" >
     <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/app.css">
+    <link rel="stylesheet" href="../assets/css/default.css">
+    <link rel="stylesheet" href="../assets/css/header.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/results.css">
+    <link rel="stylesheet" href="../assets/css/details.css">
+    <link rel="stylesheet" href="../assets/css/slideshow.css">
+    <link rel="stylesheet" href="../assets/css/spinner.css">
+    <link rel="stylesheet" href="../assets/css/charts.css">
+    <link rel="stylesheet" href="../assets/css/services.css">
+    <link rel="stylesheet" href="../assets/css/nav.css">
+    <link rel="stylesheet" href="../assets/css/thumbnails.css">
+    <link rel="stylesheet" href="../assets/css/forms.css">
+    <link rel="stylesheet" href="../assets/css/mediaqueries.css">
+    <link rel="stylesheet" href="../assets/css/footer.css">
 
     <!-- favicon info start -->
     <link rel="icon" type="image/png" href="assets/images/Favicon/favicon-32x32.png" sizes="32x32">
