--- a/client/app/services/servicesTemplate.html
+++ b/client/app/services/servicesTemplate.html
@@ -3,7 +3,7 @@
   <div class="col-md-4 amenities-categories">
     <h3>Categories</h3>
     <hr>
-    <ul ng-repeat="service in details.currentNeighborhood.services">
+    <ul ng-repeat="service in details.currentNeighborhood.services" class="service-container">
       <li class="category-container" ng-click="details.displayMarkers(service); details.selectCategory($index); details.displayAmenitiesOrAttractions(service);" ng-class="{'activeCategory next': $index === details.selectedCategory}">
         <img ng-src="{{details.getAmenitiesIcon(service[0])}}" alt="icon for amenity category">
         <span>{{service[0].displayName}}</span>
