[Update] moves foundation icons reference to a cdn rather than downloading

--- a/client/index.html
+++ b/client/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turf</title>
-    
+
     <link rel="shortcut icon" href="assets/images/Favicon/favicon-32x32.png" type="image/x-icon"/ >
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:400,300">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css">
     <!-- build:libcss -->
-    <link rel="stylesheet" href="../lib/foundation-icons/foundation-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css">
     <!-- endbuild -->
     <!-- build:css -->
-    <link rel="stylesheet" href="../assets/css/productionstyles.css"> 
-    <!-- endbuild -->  
+    <link rel="stylesheet" href="../assets/css/productionstyles.css">
+    <!-- endbuild -->
   </head>
 
   <body ng-controller="MainController as main" id="Turf">
@@ -37,8 +37,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.6/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.js"></script>
      <!-- build:slick -->
-    <script src="lib/angular-slick/dist/slick.js"></script> 
-    <!-- endbuild -->  
+    <script src="lib/angular-slick/dist/slick.js"></script>
+    <!-- endbuild -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.6/angular-animate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.4/ui-bootstrap.min.js"></script>
@@ -48,10 +48,10 @@
     <!--Highcharts -->
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
-     
-    <!-- build:app -->    
-    <script src="app/app.js"></script>    
-    <!-- endbuild -->  
+
+    <!-- build:app -->
+    <script src="app/app.js"></script>
+    <!-- endbuild -->
     <!-- build:js -->
     <script src="app/details/detailsController.js"></script>
     <script src="app/map/mapDirective.js"></script>
@@ -63,12 +63,12 @@
     <script src="app/charts/chartsDirective.js"></script>
     <script src="app/countup/countup.min.js"></script>
     <script src="app/team/teamDirective.js"></script>
-    <!-- endbuild --> 
+    <!-- endbuild -->
     <!-- build:services -->
     <script src="app/service.js"></script>
     <script src="app/map/mapService.js"></script>
     <script src="app/details/detailsService.js"></script>
-    <!-- endbuild -->  
+    <!-- endbuild -->
 
   </body>
 </html>
