[Fix] Maintenance for Google Maps API

--- a/client/index.html
+++ b/client/index.html
@@ -29,8 +29,8 @@
   <team></team>
 
     <!-- Google Maps -->
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
-    <script src="https://google-maps-utility-library-v3.googlecode.com/svn-history/r391/trunk/markerwithlabel/src/markerwithlabel.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBA-HMQEmr9vMPbXjQBNlSuSITDRHlzTpQ&libraries=places"></script>
+    <script src="lib/markerWithLabel.min.js"></script>
 
     <!-- Source JS files -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
