[Progress] Added (slow) demographic data from new souce GeoData

--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.6/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.js"></script>
      <!-- build:slick -->
-    <script src="lib/angular-slick/dist/slick.js"></script>
+    <script src="lib/slick.js"></script>
     <!-- endbuild -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.6/angular-animate.min.js"></script>
